[project]
name = "pubmed-query-project"
version = "0.1.0"
description = ""
authors = [
    {name = "sid"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython (>=1.84,<2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

